crates/inertia-axum-macros/tests/ui/fail/shared_page.rs
use inertia_axum_macros::InertiaPage;

#[derive(InertiaPage)]
#[inertia(component = "Home", shared)]
struct Home { title: String }

fn main() {}
