crates/inertia-axum-macros/tests/ui/fail/shared_page.stderr
error: #[inertia(shared)] is valid only on InertiaProps
 --> tests/ui/fail/shared_page.rs:4:1
  |
4 | #[inertia(component = "Home", shared)]
  | ^
